# company-sentiment

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  model.pt  pyproject.toml  requirements.txt
api/: main.py
app/: config.py  main.py  schemas.py
app/routers/: health.py  predict.py
app/services/: prediction_service.py
code/: main.py
code/notebooks/: best_model.pt  eda.ipynb  model.ipynb
datasets/: cleaned_data.csv
model/: classifier.py  embeddings.py  predictor.py
training/: train.py
utils/: text_cleaner.py
