[project]
name = "company-sent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "transformers>=4.53.3",
]
